<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#00bcd4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/eventNm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/meet_up"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline3" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.1" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#ffffff"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#ffffff"
                    android:textCursorDrawable="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventNm" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/facebook_icon"
                    app:layout_constraintEnd_toStartOf="@+id/sourceLoc"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#ffffff"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="#FFFFFF"
                    android:textCursorDrawable="@null"
                    app:layout_constraintEnd_toEndOf="@+id/editText4"
                    app:layout_constraintStart_toStartOf="@+id/editText4"
                    app:layout_constraintTop_toBottomOf="@+id/editText4" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/image_forgot"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/lock_content_descr"
                    app:layout_constraintEnd_toStartOf="@+id/planName"
                    app:layout_constraintTop_toBottomOf="@+id/editText5"
                    app:srcCompat="@drawable/ic_baseline_lock_24px" />

                <TextView
                    android:id="@+id/planName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgot_password"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/forgot_text_size"
                    app:layout_constraintEnd_toEndOf="@+id/editText5"
                    app:layout_constraintTop_toBottomOf="@+id/editText5" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="32dp"
                    android:background="#ffffff"
                    app:layout_constraintEnd_toEndOf="@+id/editText5"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editText5"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/sourceLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/login_with_facebook"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/login_with_facebook_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_constraintVertical_bias="0.0" />


                <android.support.constraint.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">


        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/register"
            android:textColor="#404040"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/my_button"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>